2005-12-05  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/JPanel/setBorder.java: New test.

2005-12-02  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/io/FileInputStream/security.java: Catch
	exceptions generated by unexpected permission checks..
	* gnu/testlet/java/io/FileOutputStream/security.java: Likewise.

2005-12-02  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/io/RandomAccessFile/security.java: New tests.

2005-12-02  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/io/FileOutputStream/security.java: Final set of
	throwpoint tests.

2005-12-02  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/io/FileInputStream/security.java: More tests.
	* gnu/testlet/java/io/FileOutputStream/security.java: Likewise.

2005-12-04  Guilhem Lavaux  <guilhem@kaffe.org>

	* gnu/testlet/java/net/URL/URLTest.java: Test URL with null context.

2005-12-02  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/JFormattedTextField/JFormattedTextFieldTests.java:
	Added 3 new tests to this file.

2005-12-02  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/io/FileInputStream/security.java: New test.
	* gnu/testlet/java/io/FileOutputStream/security.java: Likewise.

2005-12-01  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/io/File/security.java: Annotate
	SecurityException throwpoint tests.

2005-11-30  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/JFormattedTextField: New directory.
	* gnu/testlet/javax/swing/JFormattedTextField/JFormattedTextFieldTests.java: New test.

2005-11-30  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/io/File/security.java: Reenable listRoots test.

2005-11-29  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/net/URL/URLTest.java (testall): Enable
	URLStreamHandler test.
	(test_URLStreamHandler): Added test for classpath PR 25141.

2005-11-29  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Number/NewNumber.java: Mark not-a-test.