@@ -1,3 +1,8 @@
+2005-12-05  Anthony Green  <green@redhat.com>
+
+	* gnu/testlet/java/nio/DoubleBuffer/compareTo.java: New test.
+	* gnu/testlet/java/nio/FloatBuffer/compareTo.java: New test.
+
 2005-12-05  Anthony Balkissoon  <abalkiss@redhat.com>
 
 	* gnu/testlet/javax/swing/JPanel/setBorder.java: New test.
